actually fix issue #15: map no longer scrolls off screen

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -31,16 +31,19 @@ ul {
 .text-center {
   text-align: center;
 }
-
-#map-canvas {
-  position: absolute;
-  top: 128px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  box-sizing: border-box;
+#map-container {
   height: 100%;
   width: 100%;
+  position: fixed;
+  #map-canvas {
+    top: 128px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+  }
 }
 
 header {
@@ -87,7 +90,7 @@ main {
 
 .search-pane {
   box-sizing: border-box;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -123,32 +126,23 @@ main {
 
 @media(min-width: 768px) {
 
-  #map-canvas {
-    position: fixed;
+  #map-container {
     height: 100%;
     width: 70%;
-    top: 0;
-    right: 30%;
+    position:fixed;
+    #map-canvas {
+      position: fixed;
+      height: 100%;
+      width: 100%;
+      top: 0;
+      right: 30%;
+    }
   }
 
   .search-pane {
     top: 10px;
     left: 88px;
     width: 30%;
-
-  }
-
-  .results-pane {
-    width: 30%;
-    top: 0;
-    left: auto;
-    padding: 16px;
-  }
-
-  .results-container {
-  }
-
-  header {
     position: fixed;
     h1 {
       border-radius: $border-radius;
@@ -161,5 +155,12 @@ main {
       border-bottom-left-radius: $border-radius;
       margin-bottom: 2px;
     }
+  }
+
+  .results-pane {
+    width: 30%;
+    top: 0;
+    left: auto;
+    padding: 16px;
   }
 }
